--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
-  text-align: left;
-  background-color:rgb(187, 150, 164)
+  text-align: center;
+  background-color:rgb(187, 150, 164);
+  /* background-image: url(./src/containers/logo.png); */
   
 }
 
@@ -21,8 +22,10 @@ color:gray;
 background-color:gray
 }
 
-
-
+.list{
+  padding: 7px;
+  font-weight: bold;
+  text-align: center;}
 
 
 
